Adjustments for JDK11