@@ -433,7 +433,7 @@ public class RTMPHandler extends BaseRTMPHandler {
                 disconnectOnReturn = true;
             }
             // Evaluate request for AMF3 encoding
-            if (new Double(3d).equals(params.get("objectEncoding"))) {
+            if (Double.valueOf(3d).equals(params.get("objectEncoding"))) {
                 if (call instanceof IPendingServiceCall) {
                     Object pcResult = ((IPendingServiceCall) call).getResult();
                     Map<String, Object> result;
